AVRO-3120: Remove Java 17 related language warnings